--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "babel-polyfill": "6.26.0",
     "normalize.css": "^7.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "eslint": "^5.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -39,7 +40,6 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.13.1",
     "eslint-plugin-jest": "^21.5.0",
     "eslint-plugin-react": "^7.5.1",
     "express": "^4.16.2",
